@@ -1635,6 +1635,162 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|skipOutput
+specifier|public
+name|void
+name|skipOutput
+parameter_list|(
+name|DataInput
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|bits
+init|=
+name|in
+operator|.
+name|readByte
+argument_list|()
+operator|&
+literal|0xff
+decl_stmt|;
+name|int
+name|bit0
+init|=
+name|bits
+operator|&
+literal|1
+decl_stmt|;
+name|int
+name|bit1
+init|=
+name|bits
+operator|&
+literal|2
+decl_stmt|;
+name|int
+name|bit2
+init|=
+name|bits
+operator|&
+literal|4
+decl_stmt|;
+name|int
+name|bytesSize
+init|=
+operator|(
+name|bits
+operator|>>>
+literal|3
+operator|)
+decl_stmt|;
+if|if
+condition|(
+name|bit1
+operator|>
+literal|0
+operator|&&
+name|bytesSize
+operator|==
+literal|0
+condition|)
+block|{
+comment|// determine extra length
+name|bytesSize
+operator|=
+name|in
+operator|.
+name|readVInt
+argument_list|()
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|bit0
+operator|>
+literal|0
+condition|)
+block|{
+comment|// not all-zero case
+for|for
+control|(
+name|int
+name|pos
+init|=
+literal|0
+init|;
+name|pos
+operator|<
+name|longsSize
+condition|;
+name|pos
+operator|++
+control|)
+block|{
+name|in
+operator|.
+name|readVLong
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+if|if
+condition|(
+name|bit1
+operator|>
+literal|0
+condition|)
+block|{
+comment|// bytes exists
+name|in
+operator|.
+name|skipBytes
+argument_list|(
+name|bytesSize
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|bit2
+operator|>
+literal|0
+condition|)
+block|{
+comment|// stats exist
+name|int
+name|code
+init|=
+name|in
+operator|.
+name|readVInt
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|hasPos
+operator|&&
+operator|(
+name|code
+operator|&
+literal|1
+operator|)
+operator|==
+literal|0
+condition|)
+block|{
+name|in
+operator|.
+name|readVLong
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
+annotation|@
+name|Override
 DECL|method|getNoOutput
 specifier|public
 name|TermData
