@@ -1573,7 +1573,7 @@ specifier|public
 name|void
 name|skipBytes
 parameter_list|(
-name|int
+name|long
 name|count
 parameter_list|)
 block|{
@@ -1923,7 +1923,7 @@ specifier|public
 name|void
 name|skipBytes
 parameter_list|(
-name|int
+name|long
 name|count
 parameter_list|)
 block|{
