@@ -4200,7 +4200,7 @@ condition|)
 block|{
 name|outputs
 operator|.
-name|read
+name|skipOutput
 argument_list|(
 name|in
 argument_list|)
@@ -4218,7 +4218,7 @@ condition|)
 block|{
 name|outputs
 operator|.
-name|readFinalOutput
+name|skipFinalOutput
 argument_list|(
 name|in
 argument_list|)
@@ -5880,7 +5880,7 @@ condition|)
 block|{
 name|outputs
 operator|.
-name|read
+name|skipOutput
 argument_list|(
 name|in
 argument_list|)
@@ -5898,7 +5898,7 @@ condition|)
 block|{
 name|outputs
 operator|.
-name|readFinalOutput
+name|skipFinalOutput
 argument_list|(
 name|in
 argument_list|)
@@ -6102,17 +6102,6 @@ specifier|abstract
 name|boolean
 name|reversed
 parameter_list|()
-function_decl|;
-comment|/** Skips bytes. */
-DECL|method|skipBytes
-specifier|public
-specifier|abstract
-name|void
-name|skipBytes
-parameter_list|(
-name|int
-name|count
-parameter_list|)
 function_decl|;
 block|}
 DECL|class|ArcAndState
