@@ -692,6 +692,59 @@ block|}
 block|}
 annotation|@
 name|Override
+DECL|method|skipOutput
+specifier|public
+name|void
+name|skipOutput
+parameter_list|(
+name|DataInput
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|int
+name|len
+init|=
+name|in
+operator|.
+name|readVInt
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|len
+operator|==
+literal|0
+condition|)
+block|{
+return|return;
+block|}
+for|for
+control|(
+name|int
+name|idx
+init|=
+literal|0
+init|;
+name|idx
+operator|<
+name|len
+condition|;
+name|idx
+operator|++
+control|)
+block|{
+name|in
+operator|.
+name|readVInt
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
 DECL|method|getNoOutput
 specifier|public
 name|IntsRef
