@@ -842,6 +842,34 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|skipOutput
+specifier|public
+name|void
+name|skipOutput
+parameter_list|(
+name|DataInput
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|outputs1
+operator|.
+name|skipOutput
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+name|outputs2
+operator|.
+name|skipOutput
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
 DECL|method|getNoOutput
 specifier|public
 name|Pair
