@@ -131,7 +131,7 @@ specifier|public
 name|void
 name|skipBytes
 parameter_list|(
-name|int
+name|long
 name|count
 parameter_list|)
 block|{
