@@ -502,6 +502,27 @@ return|;
 block|}
 annotation|@
 name|Override
+DECL|method|skipOutput
+specifier|public
+name|void
+name|skipOutput
+parameter_list|(
+name|DataInput
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|outputs
+operator|.
+name|skipOutput
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Override
 DECL|method|readFinalOutput
 specifier|public
 name|Object
@@ -583,6 +604,51 @@ block|}
 return|return
 name|outputList
 return|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|skipFinalOutput
+specifier|public
+name|void
+name|skipFinalOutput
+parameter_list|(
+name|DataInput
+name|in
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|int
+name|count
+init|=
+name|in
+operator|.
+name|readVInt
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|count
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|outputs
+operator|.
+name|skipOutput
+argument_list|(
+name|in
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 annotation|@
